Closed Bug 59571 Opened 25 years ago Closed 24 years ago

netlanski movie (netling) returns incorrect value for getNextText, error 4836

Categories

(Core Graveyard :: Plug-ins, defect, P3)

x86
All
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: ekrock, Assigned: peterlubczynski-bugs)

References

()

Details

(Keywords: shockwave, Whiteboard: [branch accept])

Attachments

(1 file)

Hived off from bug 54205, "Netlanski movie (netling) hangs when "getNetText" button is pushed in Netscape 6 (Mozilla) [@ IML32.dll]," since browser no longer crashes but the wrong value is returned and an error occurs. Kelly, could you please fill in the details of platform, steps to repro, etc.?
Works fine with SW 8.0. Let me check with 8.5.
Summary: netlanski movie (netling) returns incorrect value for getNextText, error 4836 → netlanski movie (netling) returns incorrect value for getNextText, error 4836
Umm...tried this with SW8.5_full_no_ping (latest SW version) on today's branch build on windows and this works perfectly fine with the following results: netID =2 netDone =1 netError =OK
Although the netling movie returns OK status for me, other movies return different codes with Nav 4.x, IE 5, and us.
Keywords: 4xp
Escalating severity to blocker as this bug is blocking Macromedia QA from going through their test suite and possibly identifying additional bugs we may yet be unaware of. Marking shockwave.
Severity: normal → blocker
Keywords: shockwave
Peter Grandmaison sent an email to Peter L with the following information on 12/1: Anyways, I can unfortunately reproduce the netlingo bug (error code 4836 comes up instead of OK) ... however, I spent an hour in the debugger, and I know why this doesn't work ! The cgi stream is of unknown length, so in NPP_NewStream() Netscape 6 is passing in a stream length of 0xffffffff, wherease Netscape 4.7 (and IE) pass in a stream length of 0x00000000. I made a test build which replaces 0xffffffff with 0 and the movie works fine. This solution would presumably fix other streaming bugs. I'm steeling this one.
Assignee: av → peterlubczynski
OS: Windows NT → All
Well, now I know why this worked for us and not for Macormedia. Here are Peter Grandmaison's comments from e-mail: ------------------------------------ (1) When you browse to http://poppy.macromedia.com/netlanski/files/Netlingo/netlingdcrDoc.html and try to getNetText of http://elmo.macromedia.com/netlanski/bin/oblique.cgi I suspect you get different results from someone at macromedia because the server elmo is behind our firewall. I expect you get a neterror of ok, but if you click on 'nettextresult' you will get some form html for a non-existing url. If you change the domain of the url to poppy, that is, http://poppy.macromedia.com/netlanski/bin/oblique.cgi you should see the 4836 error we are talking about.
sr=buster
a=av
patch checked in
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
verified on windows trunk.(1212). Cannot verify on mac trunk unless the bug for keyboard events on mac gets fixed (i cannot edit the domain name)
for the record: the key events bug is http://bugzilla.mozilla.org/show_bug.cgi?id=58957 for the mac.
Adding branch accept to the status whiteboard. Peter, please check in on the branch ASAP. Thx .Angela...
Whiteboard: [branch accept]
reopening to get verified on branch after patch is checked in.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Patch checked into branch. Marking FIXED.
Status: REOPENED → RESOLVED
Closed: 25 years ago24 years ago
Resolution: --- → FIXED
can't verify unless bug 58957 is fixed.
Depends on: 58957
verified on mac trunk an branch (0117). Movie returns OK value for getNextText.Marking VERIFIED.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: