Set unknown length of stream to -1 bug 59571 a=av sr=buster