modules/plugin/nglsrc/ns4xPluginInstance.cpp
@@ -135,6 +135,10 @@ ns4xPluginStreamListener::OnStartBinding(nsIPluginStreamInfo* pluginInfo)
   if(mInst)
     lib = mInst->fLibrary;
 
+  // if we don't know the end of the stream, use 0 instead of -1. bug 59571
+  if (mNPStream.end == -1)
+    mNPStream.end = 0;
+
   NS_TRY_SAFE_CALL_RETURN(error, CallNPP_NewStreamProc(callbacks->newstream,
                                           npp,
                                           (char *)contentType,
